refactor: improve command palette UI and rename open- commands to edit-
- Rename open-config/hub-config/project-config/journal to edit-*
- Right-align descriptions for commands and project paths
- Add "Current Project" and "Additional Projects" headers to Projects tab
- Add "All Tags" header to Tags tab
- Extract common palette item rendering into helper function

--- a/src/registry/commands.toml
+++ b/src/registry/commands.toml
@@ -12,28 +12,28 @@ group = "General"
 help = "Open scratchpad for quick notes"
 
 [[command]]
-name = "open-config"
-group = "Configuration"
-help = "Open base config in default editor (creates if missing)"
-
-[[command]]
-name = "open-hub-config"
-group = "Configuration"
-help = "Open hub config in default editor (creates if missing)"
-
-[[command]]
-name = "open-project-config"
-group = "Configuration"
-help = "Open project config in default editor (creates if missing)"
-
-[[command]]
 name = "reload-config"
 group = "Configuration"
-help = "Reload configuration from disk"
+help = "Reload configuration after editing"
 
 [[command]]
-name = "open-journal"
-group = "Journal"
+name = "edit-config"
+group = "Edit"
+help = "Open base config in default editor"
+
+[[command]]
+name = "edit-hub-config"
+group = "Edit"
+help = "Open hub config in default editor"
+
+[[command]]
+name = "edit-project-config"
+group = "Edit"
+help = "Open project config in default editor"
+
+[[command]]
+name = "edit-journal"
+group = "Edit"
 help = "Open current journal in default editor"
 
 [[command]]
