feat: improve UX for hiding, calendar events, and command palette
- Add hidden entries indicator at top of daily view showing count
- Grey out past calendar events with empty circle indicator (○)
- Filter past events from agenda/upcoming views
- Smart selection tracking when toggling hide mode:
  - Non-hidden entry selected: follows entry to new position
  - Hidden entry selected: moves to first visible entry below
- Paste now positions cursor on last pasted entry
- Command palette stays open after delete/hide operations
- Confirm dialog: Enter to confirm, Escape to cancel
- Return to Tags tab after confirming/canceling tag deletion
- Pressing reorder key (r) while in reorder mode confirms changes
- Rename MoveToTomorrow action to Defer

--- a/src/registry/actions.toml
+++ b/src/registry/actions.toml
@@ -104,7 +104,7 @@ default_keys = ["T"]
 contexts = ["shared_normal", "selection"]
 
 [[action]]
-key_action_id = "move_to_tomorrow"
+key_action_id = "defer"
 default_keys = [">"]
 contexts = ["shared_normal", "selection"]
 
@@ -191,7 +191,7 @@ contexts = ["edit"]
 [[action]]
 key_action_id = "reorder_mode"
 default_keys = ["r"]
-contexts = ["daily_normal"]
+contexts = ["daily_normal", "reorder"]
 
 [[action]]
 key_action_id = "tidy_entries"
